# neurox

./: Cargo.toml  LICENSE  README.md
examples/: xor.rs
src/: activations.rs  data.rs  device.rs  errors.rs  layers.rs  lib.rs  loss.rs  model.rs  ops.rs  optimizer.rs  tensor.rs  utils.rs
tests/: basic_test.rs
